# mgc

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: alloc.rs  gc.rs  global.rs  lib.rs  state.rs  trace.rs
tests/: linked_list.rs
